--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   freezed: ^2.4.7
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  package_info_plus: ^5.0.1
 
 
 dev_dependencies:
