--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   package_info_plus: ^5.0.1
+  fl_chart: ^0.66.2
 
 
 dev_dependencies:
